# food_leftover_estimation

./: CMakeLists.txt  README.md  requirements.txt
cpp_code/: main.cpp
cpp_code/include/: find_food.hpp  main_helper.hpp  mean_average_precision_helper.h  multi_classify.hpp  segmentation.hpp  single_classify.hpp
cpp_code/src/: find_food.cpp  main_helper.cpp  mean_average_precision_helper.cpp  multi_classify.cpp  segmentation.cpp  single_classify.cpp
python_code/: multilabel_classifier.py  singlelabel_classifier.py  train.py
python_code/weights/: class_names.json
tmp/: food_info.txt  labeled_rectangles.txt  rect.txt  rectangles.txt  segmentations_rectangle.txt
